--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -20,19 +20,19 @@ input::-webkit-inner-spin-button {
 .textoValido{
     font-size: 12px;
     background-color: green!important;
-    color: white !important;;
+    color: white !important;
   }
 
   .textoInvalido{
     font-size: 12px;
     background-color: red!important;
-    color: white !important;;
+    color: white !important;
   }
 
   .textoCadastro{
     font-size: 12px;
     background-color: rgb(0, 78, 114)!important;
-    color: white !important;;
+    color: white !important;
   }
 
   .ajusteDireita{
