--- a/frontend/src/app/homePage/homePage.component.html
+++ b/frontend/src/app/homePage/homePage.component.html
@@ -1,4 +1,4 @@
-<div style="background-image: url('/assets/wallpaper2.jpg'); background-size: 50% auto; background-repeat: repeat;">
+<div style="background-image: url('/assets/fundo_projeto.png'); background-size: 65% auto; background-repeat: repeat;">
   <mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
     <mat-grid-tile colspan="12">
       <h1 class="title">Balcão UFF</h1>
