--- a/frontend/src/app/myProfile/myProfile.component.html
+++ b/frontend/src/app/myProfile/myProfile.component.html
@@ -1,4 +1,4 @@
-<div [style]="carregando">
+<div [style]="carregando" style="background-image: url('/assets/fundo_projeto.png'); background-size: 105% auto;">
   <mat-card class="card-container">
     <mat-grid-list cols="12" rowHeight="150px" gutterSize="10px">
 
