--- a/frontend/src/app/homePage/homePage.component.css
+++ b/frontend/src/app/homePage/homePage.component.css
@@ -1,9 +1,9 @@
 .title {
-  color: black; /* Cor do texto */
+  color: rgb(255, 255, 255); /* Cor do texto */
   font-family: 'Roboto', Arial, sans-serif; /* Fonte profissional e moderna */
   font-weight: 600; /* Peso moderado para uma aparência mais equilibrada */
   font-size: 60px; /* Tamanho maior para maior impacto */
-  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.6); /* Borda branca suave */
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6); /* Borda branca suave */
 }
 
 
